# pomodoro-back

./: .pre-commit-config.yaml  .pylintrc  pyproject.toml
src/blog/: admin.py  models.py
src/blog/migrations/: 0001_initial.py  0002_postagem_criado_em_postagem_publicado.py
src/pomodoro/: asgi.py  settings.py  urls.py  wsgi.py
